# epochapi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
contracts/rust/api_contract/: Cargo.toml  build.rs
contracts/rust/api_contract/src/: lib.rs
docker/nginx/: local-edge.conf
docs/: ACCESSIBILITY_EVIDENCE.md  CONTRACT_WORKFLOW.md
docs/plans/: 2026-02-18-spec-first-site-and-contracts.md  2026-02-18-spec-first-site-design.md
scripts/: check-generated-clean.sh  contract-test.sh  docker-smoke-test.sh  generate-all.sh  generate-rust-contract.sh  generate-web-docs-model.mjs  generate-web-types.sh  validate-openapi.mjs
src/: main.rs
web/: .gitignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  server.mjs
web/src/components/: ThemeToggle.astro
web/src/layouts/: BaseLayout.astro
web/src/lib/: api-tester.test.ts  api-tester.ts
web/src/pages/: accessibility.astro  api.astro  index.astro
web/src/pages/use-cases/: prevent-offline-cheating.astro  trusted-time.astro  validate-stored-time.astro
web/src/styles/: base.css  tokens.css
web/tests/e2e/: a11y.spec.ts  api-console.spec.ts
