[package]
name = "epochapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["query"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
ed25519-dalek = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
